@@ -27,6 +27,8 @@
 #define	ZBX_DB_FAIL	(-1)
 #define	ZBX_DB_DOWN	(-2)
 
+#define ZBX_MAX_SQL_SIZE	262144	/* 256KB */
+
 #ifdef HAVE_MYSQL
 #	include "mysql.h"
 #	include "errmsg.h"
